fix header gap

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ header .menu-options{
     justify-content: space-around;
     align-items: center;
     height: 100%;
+    margin: 20px;
 }
 header .nav-menu .logo img {
     height: 100%;
@@ -33,13 +34,15 @@ header .nav-menu .logo{
     margin: 10px 20px;
 
 }
-header .menu-options p{
+header .menu-options .list {
+    display: flex;
+    list-style: none;
+    gap: 25px;
     font-size: 20px;
     color: #777777;
     margin: 0 5px;
     text-align: center;
 }
-
 
 main .whitefund{
     width: 100%;
